# docs

./: 404.html  LICENSE  README.md  generate_from_template.kts  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.fleet/: run.json
.github/workflows/: publish.yml
docs/: index.md
docs/krontab/: index.md
docs/kslog/: index.md  logging.md  setup.md
docs/micro_utils/: colors.md  colors.template.md  index.md  resources.md  startup.md
docs/navigation/: getting-started.md  index.md
docs/plagubot/: index.md
docs/services/: index.md
docs/tgbotapi/: faq.md  index.md  logs.md
krontab/: index.html
krontab/describing/: krontabscheduler.html  string-format.html
krontab/introduction/: faq.html  how-to-use.html  including-in-project.html
kslog/: index.html  logging.html  setup.html
micro_utils/: colors.html  colors.ktstemplate.html  colors.template.html  index.html  resources.html  startup.html
micro_utils/repos/: index.html  inmemory.html
navigation/: getting-started.html  index.html
plagubot/: index.html  opportunities_out_of_the_box.html
resources/stylesheets/: navigation.css
search/: search_index.json
services/: index.html
tgbotapi/: faq.html  index.html  logs.html
tgbotapi/dsls/: keyboards.html  live-location.html  text.html
tgbotapi/guides/: faq.html  keyboards.html
tgbotapi/introduction/: before-any-bot-project.html  first-bot.html  including-in-your-project.html  proxy-setup.html
tgbotapi/logic/: api-extensions.html  behaviour-builder-with-fsm.html  behaviour-builder.html  exceptions-handling.html  files-handling.html  low-level-work-with-bots.html  media-groups.html  types-conversations.html  updates-with-flows.html
(+41 files in other folders)
