[tool.poetry]
name = "docs"
version = "1.0.0"
description = "Documentation for InsanusMokrassar's projects"
authors = ["InsanusMokrassar"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.5.3"
markdown-callouts = "^0.4.0"
mkdocs-autorefs = "^0.5.0"
mkdocs-include-dir-to-nav = "^1.2.0"
mkdocs-material = "^9.5.6"
pymdown-extensions = "^10.7"
mkdocs-mermaid2-plugin = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
